--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.data.mongodb.repositories.enabled=true
 
 security.basic.enabled=false
 management.security.enabled=false
+
+server.port = 8080
+server.ssl.key-store = classpath:keystore.p12
+server.ssl.key-store-password = secret
+server.ssl.key-store-type= PKCS12
